# goit-pyweb-hw7

./: pyproject.toml  seed.py  tables.sql
conf/: models.py  my_select.py  seed.py
migrations/: env.py
migrations/versions/: 1540243c45ab_init.py  fd423331d2d7_init.py
