[tool.poetry]
name = "goit-pyweb-hw7"
version = "0.1.0"
description = ""
authors = ["Ilya <159926377+TechnoGoku@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
