[tool.poetry]
name = "goit-pyweb-hw7"
version = "0.1.0"
description = ""
authors = ["Ilya <159926377+TechnoGoku@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
poetry = "^1.8.3"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
faker = "^25.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
